Tue Jul 24 10:56:04 2001  Ossama Othman  <ossama@uci.edu>

	* bin/generate_doxygen.pl (TAO_DOCS):

	  Added "tao_security" and "tao_ssliop" Doxygen configurations to
	  the list of documentation to generate.

Tue Jul 24 07:45:03 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/Containers_T: Fixed some problems with the lack of 
	  const for the ACE_DLList and ACE_Double_Linked_List classes.
  	  Thanks to Michael Kircher for reporting this.

	* ace/config-cygwin32-common.h: Removed the ACE_LACKS_FORK
	  macro since this is apparently working on Cygwin.  Thanks tj
 	  Stefan Kluehspies <Stefan.Kluehspies@gmx.net> for reporting
 	  this.

	* ace/config-cygwin32.h: Removed the #define _CLOCKID_T
	  macro, which should now be handled by the following change.

	* ace/OS.h: Added a #defined for _CLOCKID_T_.  Thanks to
	  Stefan Kluehspies <Stefan.Kluehspies@gmx.net> for
	  reporting this.

Tue Jul 24 11:10:59 2001  Krishnakumar B  <kitty@cs.wustl.edu>

	* ace/OS.h:

	  Fix the compile errors seen on gcc-3.0 with -pedantic and
	  -Wno-long-long. This should fix all the errors.

Tue Jul 24 10:07:31 2001  Chad Elliott  <elliott_c@ociweb.com>

        * include/makeinclude/platform_sunos5_g++.GNU:

          Add an optimize override to 0 for g++ 3.0.  The compiler breaks on
          a tremendous amount of files, even with -O.

Tue Jul 24 10:04:52 2001  Chad Elliott  <elliott_c@ociweb.com>

        * ace/INET_Addr.cpp:

          Corrected a run-time error on Tru64 with gcc.  Any executable
 	  that called ACE_INET_Addr::get_host_name() would core dump.
  	  This was caused by the call to ACE_OS::gethostbyaddr_r().

Tue Jul 24 08:20:02 2001  Chad Elliott  <elliott_c@ociweb.com>

        * include/makeinclude/platform_aix_ibm.GNU:

          Change -O2 to -O.  The optimizer seems to be a tiny
          bit broken, which is demonstrated by a few TAO and orbsvcs
          tests.

Mon Jul 23 17:38:46 2001  Ossama Othman  <ossama@uci.edu>
